--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title: Not Pure Poole
 description: A simple, beautiful, and powerful Jekyll theme for blogs
-url: https://vszhub.github.io
+url: https://ksysky1.github.io
 avatar: /avatar.jpeg
 paginate: 5
 permalink: pretty
@@ -29,11 +29,11 @@ exclude:
 
 # Optimize Jekyl SEO Tag
 twitter:
-  username: vszhub
+  username: ksysky1
   card: summary
 logo: logo.png
 social:
-  name: Songzi Vong
+  name: Kang Seungyeon
   links:
     - https://twitter.com/vszhub
     - https://github.com/vszhub
@@ -54,6 +54,6 @@ sass:
 
 # Specify the author for blog posts
 author:
-  name: Songzi Vong
-  url: https://github.com/vszhub/
-  email: vszhub@gmail.com
+  name: Kang Seungyeon
+  url: https://github.com/ksysky1/
+  email: ksy203205@gmail.com
