--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title: Not Pure Poole
-description: A simple, beautiful, and powerful Jekyll theme for blogs
+title: 강승연의 blog
+description: 제주대학교 컴퓨터교육과 2020104123
 url: https://ksysky1.github.io
 avatar: /avatar.jpeg
 paginate: 5
