--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,9 +1,7 @@
 - title: Email
-  url: mailto://vszhub@gmail.com
+  url: mailto://ksy203205@naver.com
   icon: fas fa-envelope
-- title: Twitter
-  url: https://twitter.com/vszhub
-  icon: fab fa-twitter
+
 - title: GitHub
-  url: https://github.com/vszhub/not-pure-poole
+  url: https://github.com/ksysky1
   icon: fab fa-github
